{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 95,
  "lineage": "76dde8d4-d649-3d69-2c59-98eec99e81b3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-033a65567756b31d7",
            "arn": "arn:aws:ec2:us-west-1:633291361733:instance/i-05b9d75bb36145274",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "eks-ssm-prod-bastion-profile",
            "id": "i-05b9d75bb36145274",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0492a29bf0e86915d",
            "private_dns": "ip-10-20-138-169.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.138.169",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0164d53bf4af3d7f5",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0158bed8779a45e2f",
            "tags": {
              "Name": "eks-ssm-prod-bastion",
              "Project": "eks-ssm-prod"
            },
            "tags_all": {
              "Name": "eks-ssm-prod-bastion",
              "Project": "eks-ssm-prod"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02ea27aa1b3463b9a"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.bastion_profile",
            "aws_iam_role.bastion_role",
            "aws_security_group.bastion_sg",
            "aws_security_group.vpce_sg",
            "aws_vpc_endpoint.interface",
            "aws_vpc_endpoint.s3",
            "data.aws_ami.al2023",
            "data.aws_availability_zones.available",
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_ec2_tag.cluster_primary_security_group",
            "module.eks.aws_eks_access_entry.this",
            "module.eks.aws_eks_access_policy_association.this",
            "module.eks.aws_eks_addon.before_compute",
            "module.eks.aws_eks_addon.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_eks_identity_provider_config.this",
            "module.eks.aws_iam_openid_connect_provider.oidc_provider",
            "module.eks.aws_iam_policy.cluster_encryption",
            "module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks.aws_iam_role.this",
            "module.eks.aws_iam_role_policy_attachment.additional",
            "module.eks.aws_iam_role_policy_attachment.cluster_encryption",
            "module.eks.aws_iam_role_policy_attachment.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.eks.aws_security_group_rule.cluster",
            "module.eks.aws_security_group_rule.node",
            "module.eks.data.aws_caller_identity.current",
            "module.eks.data.aws_eks_addon_version.this",
            "module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks.data.aws_iam_session_context.current",
            "module.eks.data.aws_partition.current",
            "module.eks.data.tls_certificate.this",
            "module.eks.module.eks_managed_node_group.aws_autoscaling_schedule.this",
            "module.eks.module.eks_managed_node_group.aws_eks_node_group.this",
            "module.eks.module.eks_managed_node_group.aws_iam_role.this",
            "module.eks.module.eks_managed_node_group.aws_iam_role_policy.this",
            "module.eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.additional",
            "module.eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.eks.module.eks_managed_node_group.aws_launch_template.this",
            "module.eks.module.eks_managed_node_group.aws_placement_group.this",
            "module.eks.module.eks_managed_node_group.data.aws_caller_identity.current",
            "module.eks.module.eks_managed_node_group.data.aws_ec2_instance_type.this",
            "module.eks.module.eks_managed_node_group.data.aws_ec2_instance_type_offerings.this",
            "module.eks.module.eks_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.module.eks_managed_node_group.data.aws_iam_policy_document.role",
            "module.eks.module.eks_managed_node_group.data.aws_partition.current",
            "module.eks.module.eks_managed_node_group.data.aws_ssm_parameter.ami",
            "module.eks.module.eks_managed_node_group.data.aws_subnets.placement_group",
            "module.eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.eks.module.eks_managed_node_group.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.eks.module.fargate_profile.aws_eks_fargate_profile.this",
            "module.eks.module.fargate_profile.aws_iam_role.this",
            "module.eks.module.fargate_profile.aws_iam_role_policy.this",
            "module.eks.module.fargate_profile.aws_iam_role_policy_attachment.additional",
            "module.eks.module.fargate_profile.aws_iam_role_policy_attachment.this",
            "module.eks.module.fargate_profile.data.aws_caller_identity.current",
            "module.eks.module.fargate_profile.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.module.fargate_profile.data.aws_iam_policy_document.role",
            "module.eks.module.fargate_profile.data.aws_partition.current",
            "module.eks.module.fargate_profile.data.aws_region.current",
            "module.eks.module.kms.aws_kms_alias.this",
            "module.eks.module.kms.aws_kms_external_key.this",
            "module.eks.module.kms.aws_kms_grant.this",
            "module.eks.module.kms.aws_kms_key.this",
            "module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.eks.module.kms.aws_kms_replica_key.this",
            "module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks.module.kms.data.aws_partition.current",
            "module.eks.module.self_managed_node_group.aws_autoscaling_group.this",
            "module.eks.module.self_managed_node_group.aws_autoscaling_schedule.this",
            "module.eks.module.self_managed_node_group.aws_eks_access_entry.this",
            "module.eks.module.self_managed_node_group.aws_iam_instance_profile.this",
            "module.eks.module.self_managed_node_group.aws_iam_role.this",
            "module.eks.module.self_managed_node_group.aws_iam_role_policy.this",
            "module.eks.module.self_managed_node_group.aws_iam_role_policy_attachment.additional",
            "module.eks.module.self_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.eks.module.self_managed_node_group.aws_launch_template.this",
            "module.eks.module.self_managed_node_group.aws_placement_group.this",
            "module.eks.module.self_managed_node_group.data.aws_caller_identity.current",
            "module.eks.module.self_managed_node_group.data.aws_ec2_instance_type.this",
            "module.eks.module.self_managed_node_group.data.aws_ec2_instance_type_offerings.this",
            "module.eks.module.self_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.module.self_managed_node_group.data.aws_iam_policy_document.role",
            "module.eks.module.self_managed_node_group.data.aws_partition.current",
            "module.eks.module.self_managed_node_group.data.aws_ssm_parameter.ami",
            "module.eks.module.self_managed_node_group.data.aws_subnets.placement_group",
            "module.eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.eks.module.self_managed_node_group.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.eks.time_sleep.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:633291361733:security-group/sg-02ea27aa1b3463b9a",
            "description": "Private bastion - no inbound (SSM only)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02ea27aa1b3463b9a",
            "ingress": [],
            "name": "eks-ssm-prod-bastion-sg",
            "name_prefix": "",
            "owner_id": "633291361733",
            "revoke_rules_on_delete": false,
            "tags": {
              "Project": "eks-ssm-prod"
            },
            "tags_all": {
              "Project": "eks-ssm-prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fa40d128aa00c481"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpce_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:633291361733:security-group/sg-033d924320fd3006f",
            "description": "VPC endpoints HTTPS from inside VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-033d924320fd3006f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.20.0.0/16"
                ],
                "description": "HTTPS from VPC CIDR",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "eks-ssm-prod-vpce-sg",
            "name_prefix": "",
            "owner_id": "633291361733",
            "revoke_rules_on_delete": false,
            "tags": {
              "Project": "eks-ssm-prod"
            },
            "tags_all": {
              "Project": "eks-ssm-prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fa40d128aa00c481"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ec2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:633291361733:vpc-endpoint/vpce-03e45626f6b34369f",
            "dns_entry": [
              {
                "dns_name": "vpce-03e45626f6b34369f-74rgngkt.ec2.us-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z12I86A8N7VCZO"
              },
              {
                "dns_name": "vpce-03e45626f6b34369f-74rgngkt-us-west-1a.ec2.us-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z12I86A8N7VCZO"
              },
              {
                "dns_name": "vpce-03e45626f6b34369f-74rgngkt-us-west-1b.ec2.us-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z12I86A8N7VCZO"
              },
              {
                "dns_name": "ec2.us-west-1.amazonaws.com",
                "hosted_zone_id": "Z00133082YFRD2BKV7WWM"
              },
              {
                "dns_name": "ec2.us-west-1.api.aws",
                "hosted_zone_id": "Z066117215GJWUEHH9FRI"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-03e45626f6b34369f",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-057b70fb4c69e7eae",
              "eni-0aaac8b842b72ac5a"
            ],
            "owner_id": "633291361733",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-033d924320fd3006f"
            ],
            "service_name": "com.amazonaws.us-west-1.ec2",
            "service_region": "us-west-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.20.133.150",
                "subnet_id": "subnet-0158bed8779a45e2f"
              },
              {
                "ipv4": "10.20.148.141",
                "subnet_id": "subnet-0f56b471510ef87ba"
              }
            ],
            "subnet_ids": [
              "subnet-0158bed8779a45e2f",
              "subnet-0f56b471510ef87ba"
            ],
            "tags": {
              "Name": "eks-ssm-prod-ec2-vpce",
              "Project": "eks-ssm-prod"
            },
            "tags_all": {
              "Name": "eks-ssm-prod-ec2-vpce",
              "Project": "eks-ssm-prod"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0fa40d128aa00c481"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpce_sg",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ec2messages",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:633291361733:vpc-endpoint/vpce-0b1ae9d9f88942252",
            "dns_entry": [
              {
                "dns_name": "vpce-0b1ae9d9f88942252-30is179m.ec2messages.us-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z12I86A8N7VCZO"
              },
              {
                "dns_name": "vpce-0b1ae9d9f88942252-30is179m-us-west-1a.ec2messages.us-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z12I86A8N7VCZO"
              },
              {
                "dns_name": "vpce-0b1ae9d9f88942252-30is179m-us-west-1b.ec2messages.us-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z12I86A8N7VCZO"
              },
              {
                "dns_name": "ec2messages.us-west-1.amazonaws.com",
                "hosted_zone_id": "Z07075883KPZA4FNF45W0"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0b1ae9d9f88942252",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0b33d64388af6900a",
              "eni-0b8e42aa324393df3"
            ],
            "owner_id": "633291361733",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-033d924320fd3006f"
            ],
            "service_name": "com.amazonaws.us-west-1.ec2messages",
            "service_region": "us-west-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.20.142.151",
                "subnet_id": "subnet-0158bed8779a45e2f"
              },
              {
                "ipv4": "10.20.155.89",
                "subnet_id": "subnet-0f56b471510ef87ba"
              }
            ],
            "subnet_ids": [
              "subnet-0158bed8779a45e2f",
              "subnet-0f56b471510ef87ba"
            ],
            "tags": {
              "Name": "eks-ssm-prod-ec2messages-vpce",
              "Project": "eks-ssm-prod"
            },
            "tags_all": {
              "Name": "eks-ssm-prod-ec2messages-vpce",
              "Project": "eks-ssm-prod"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0fa40d128aa00c481"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpce_sg",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ecr.api",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:633291361733:vpc-endpoint/vpce-07daa6834fa7053a3",
            "dns_entry": [
              {
                "dns_name": "vpce-07daa6834fa7053a3-pbdmrt4t.api.ecr.us-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z12I86A8N7VCZO"
              },
              {
                "dns_name": "vpce-07daa6834fa7053a3-pbdmrt4t-us-west-1b.api.ecr.us-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z12I86A8N7VCZO"
              },
              {
                "dns_name": "vpce-07daa6834fa7053a3-pbdmrt4t-us-west-1a.api.ecr.us-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z12I86A8N7VCZO"
              },
              {
                "dns_name": "api.ecr.us-west-1.amazonaws.com",
                "hosted_zone_id": "Z09307381J308JYA2O8N0"
              },
              {
                "dns_name": "ecr.us-west-1.api.aws",
                "hosted_zone_id": "Z07084952WK2GZW8RQRI7"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-07daa6834fa7053a3",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-063e3c9267e388305",
              "eni-0d6751d11facc29d6"
            ],
            "owner_id": "633291361733",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-033d924320fd3006f"
            ],
            "service_name": "com.amazonaws.us-west-1.ecr.api",
            "service_region": "us-west-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.20.130.206",
                "subnet_id": "subnet-0158bed8779a45e2f"
              },
              {
                "ipv4": "10.20.157.155",
                "subnet_id": "subnet-0f56b471510ef87ba"
              }
            ],
            "subnet_ids": [
              "subnet-0158bed8779a45e2f",
              "subnet-0f56b471510ef87ba"
            ],
            "tags": {
              "Name": "eks-ssm-prod-ecr.api-vpce",
              "Project": "eks-ssm-prod"
            },
            "tags_all": {
              "Name": "eks-ssm-prod-ecr.api-vpce",
              "Project": "eks-ssm-prod"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0fa40d128aa00c481"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpce_sg",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ecr.dkr",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:633291361733:vpc-endpoint/vpce-043680ec00f43f124",
            "dns_entry": [
              {
                "dns_name": "vpce-043680ec00f43f124-xy99rddn.dkr.ecr.us-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z12I86A8N7VCZO"
              },
              {
                "dns_name": "vpce-043680ec00f43f124-xy99rddn-us-west-1a.dkr.ecr.us-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z12I86A8N7VCZO"
              },
              {
                "dns_name": "vpce-043680ec00f43f124-xy99rddn-us-west-1b.dkr.ecr.us-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z12I86A8N7VCZO"
              },
              {
                "dns_name": "dkr.ecr.us-west-1.amazonaws.com",
                "hosted_zone_id": "Z00132821631XTHEBDXMG"
              },
              {
                "dns_name": "*.dkr.ecr.us-west-1.amazonaws.com",
                "hosted_zone_id": "Z00132821631XTHEBDXMG"
              },
              {
                "dns_name": "dkr-ecr.us-west-1.on.aws",
                "hosted_zone_id": "Z00132812JW1MEGP6ZGK7"
              },
              {
                "dns_name": "*.dkr-ecr.us-west-1.on.aws",
                "hosted_zone_id": "Z00132812JW1MEGP6ZGK7"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-043680ec00f43f124",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-07397018559702d58",
              "eni-0af271e3fd2024523"
            ],
            "owner_id": "633291361733",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-033d924320fd3006f"
            ],
            "service_name": "com.amazonaws.us-west-1.ecr.dkr",
            "service_region": "us-west-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.20.139.22",
                "subnet_id": "subnet-0158bed8779a45e2f"
              },
              {
                "ipv4": "10.20.146.45",
                "subnet_id": "subnet-0f56b471510ef87ba"
              }
            ],
            "subnet_ids": [
              "subnet-0158bed8779a45e2f",
              "subnet-0f56b471510ef87ba"
            ],
            "tags": {
              "Name": "eks-ssm-prod-ecr.dkr-vpce",
              "Project": "eks-ssm-prod"
            },
            "tags_all": {
              "Name": "eks-ssm-prod-ecr.dkr-vpce",
              "Project": "eks-ssm-prod"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0fa40d128aa00c481"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpce_sg",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "logs",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:633291361733:vpc-endpoint/vpce-0bf1a9829faf6f488",
            "dns_entry": [
              {
                "dns_name": "vpce-0bf1a9829faf6f488-af80qny2.logs.us-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z12I86A8N7VCZO"
              },
              {
                "dns_name": "vpce-0bf1a9829faf6f488-af80qny2-us-west-1a.logs.us-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z12I86A8N7VCZO"
              },
              {
                "dns_name": "vpce-0bf1a9829faf6f488-af80qny2-us-west-1b.logs.us-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z12I86A8N7VCZO"
              },
              {
                "dns_name": "logs.us-west-1.amazonaws.com",
                "hosted_zone_id": "Z07076221GETS37ERDLEU"
              },
              {
                "dns_name": "logs.us-west-1.api.aws",
                "hosted_zone_id": "Z06612942C5XKKT1N0U9T"
              },
              {
                "dns_name": "streaming-logs.us-west-1.amazonaws.com",
                "hosted_zone_id": "Z06613352OOO8I94QOVFS"
              },
              {
                "dns_name": "streaming-logs.us-west-1.api.aws",
                "hosted_zone_id": "Z066133015KXND2L81DVU"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0bf1a9829faf6f488",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00a8ae5bf46357e12",
              "eni-0e42f416f6ac0f05f"
            ],
            "owner_id": "633291361733",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-033d924320fd3006f"
            ],
            "service_name": "com.amazonaws.us-west-1.logs",
            "service_region": "us-west-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.20.142.172",
                "subnet_id": "subnet-0158bed8779a45e2f"
              },
              {
                "ipv4": "10.20.155.26",
                "subnet_id": "subnet-0f56b471510ef87ba"
              }
            ],
            "subnet_ids": [
              "subnet-0158bed8779a45e2f",
              "subnet-0f56b471510ef87ba"
            ],
            "tags": {
              "Name": "eks-ssm-prod-logs-vpce",
              "Project": "eks-ssm-prod"
            },
            "tags_all": {
              "Name": "eks-ssm-prod-logs-vpce",
              "Project": "eks-ssm-prod"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0fa40d128aa00c481"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpce_sg",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ssm",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:633291361733:vpc-endpoint/vpce-00d03263d2f4fc552",
            "dns_entry": [
              {
                "dns_name": "vpce-00d03263d2f4fc552-3k0ohd0k.ssm.us-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z12I86A8N7VCZO"
              },
              {
                "dns_name": "vpce-00d03263d2f4fc552-3k0ohd0k-us-west-1b.ssm.us-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z12I86A8N7VCZO"
              },
              {
                "dns_name": "vpce-00d03263d2f4fc552-3k0ohd0k-us-west-1a.ssm.us-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z12I86A8N7VCZO"
              },
              {
                "dns_name": "ssm.us-west-1.amazonaws.com",
                "hosted_zone_id": "Z09300183EQNX8LBVW6M"
              },
              {
                "dns_name": "ssm.us-west-1.api.aws",
                "hosted_zone_id": "Z0013636PMJ04U9RQ63A"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-00d03263d2f4fc552",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-01de7c3ad940058c4",
              "eni-05ae25370f2ecdc3f"
            ],
            "owner_id": "633291361733",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-033d924320fd3006f"
            ],
            "service_name": "com.amazonaws.us-west-1.ssm",
            "service_region": "us-west-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.20.139.171",
                "subnet_id": "subnet-0158bed8779a45e2f"
              },
              {
                "ipv4": "10.20.157.163",
                "subnet_id": "subnet-0f56b471510ef87ba"
              }
            ],
            "subnet_ids": [
              "subnet-0158bed8779a45e2f",
              "subnet-0f56b471510ef87ba"
            ],
            "tags": {
              "Name": "eks-ssm-prod-ssm-vpce",
              "Project": "eks-ssm-prod"
            },
            "tags_all": {
              "Name": "eks-ssm-prod-ssm-vpce",
              "Project": "eks-ssm-prod"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0fa40d128aa00c481"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpce_sg",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ssmmessages",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:633291361733:vpc-endpoint/vpce-0dbf9d9e0c7d8e60c",
            "dns_entry": [
              {
                "dns_name": "vpce-0dbf9d9e0c7d8e60c-cyibhx52.ssmmessages.us-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z12I86A8N7VCZO"
              },
              {
                "dns_name": "vpce-0dbf9d9e0c7d8e60c-cyibhx52-us-west-1a.ssmmessages.us-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z12I86A8N7VCZO"
              },
              {
                "dns_name": "vpce-0dbf9d9e0c7d8e60c-cyibhx52-us-west-1b.ssmmessages.us-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z12I86A8N7VCZO"
              },
              {
                "dns_name": "ssmmessages.us-west-1.amazonaws.com",
                "hosted_zone_id": "Z00037972O9F1TNLT3XVB"
              },
              {
                "dns_name": "ssmmessages.us-west-1.api.aws",
                "hosted_zone_id": "Z06632082RRDRDSN5MGKV"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0dbf9d9e0c7d8e60c",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-024639b4460016377",
              "eni-0480931fea1a5ce2a"
            ],
            "owner_id": "633291361733",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-033d924320fd3006f"
            ],
            "service_name": "com.amazonaws.us-west-1.ssmmessages",
            "service_region": "us-west-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.20.133.86",
                "subnet_id": "subnet-0158bed8779a45e2f"
              },
              {
                "ipv4": "10.20.151.124",
                "subnet_id": "subnet-0f56b471510ef87ba"
              }
            ],
            "subnet_ids": [
              "subnet-0158bed8779a45e2f",
              "subnet-0f56b471510ef87ba"
            ],
            "tags": {
              "Name": "eks-ssm-prod-ssmmessages-vpce",
              "Project": "eks-ssm-prod"
            },
            "tags_all": {
              "Name": "eks-ssm-prod-ssmmessages-vpce",
              "Project": "eks-ssm-prod"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0fa40d128aa00c481"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpce_sg",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "sts",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:633291361733:vpc-endpoint/vpce-06f81a78032556040",
            "dns_entry": [
              {
                "dns_name": "vpce-06f81a78032556040-u45oud8t.sts.us-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z12I86A8N7VCZO"
              },
              {
                "dns_name": "vpce-06f81a78032556040-u45oud8t-us-west-1a.sts.us-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z12I86A8N7VCZO"
              },
              {
                "dns_name": "vpce-06f81a78032556040-u45oud8t-us-west-1b.sts.us-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z12I86A8N7VCZO"
              },
              {
                "dns_name": "sts.us-west-1.amazonaws.com",
                "hosted_zone_id": "Z07185043G0YV0WN1SUH2"
              },
              {
                "dns_name": "sts.us-west-1.api.aws",
                "hosted_zone_id": "Z07179463IQ583N5V6ZPB"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-06f81a78032556040",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-014257bcecde7a376",
              "eni-07649e20d9e37b78a"
            ],
            "owner_id": "633291361733",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-033d924320fd3006f"
            ],
            "service_name": "com.amazonaws.us-west-1.sts",
            "service_region": "us-west-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.20.141.170",
                "subnet_id": "subnet-0158bed8779a45e2f"
              },
              {
                "ipv4": "10.20.144.88",
                "subnet_id": "subnet-0f56b471510ef87ba"
              }
            ],
            "subnet_ids": [
              "subnet-0158bed8779a45e2f",
              "subnet-0f56b471510ef87ba"
            ],
            "tags": {
              "Name": "eks-ssm-prod-sts-vpce",
              "Project": "eks-ssm-prod"
            },
            "tags_all": {
              "Name": "eks-ssm-prod-sts-vpce",
              "Project": "eks-ssm-prod"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0fa40d128aa00c481"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpce_sg",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:633291361733:vpc-endpoint/vpce-0fe30ce0b1a9b4459",
            "cidr_blocks": [
              "52.219.220.0/23",
              "52.219.120.0/22",
              "16.15.0.0/21",
              "52.219.216.0/23",
              "52.219.194.0/24",
              "52.219.24.0/21",
              "52.219.112.0/21",
              "3.5.160.0/22",
              "52.219.255.0/24",
              "52.219.23.0/24",
              "52.219.192.0/23"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0fe30ce0b1a9b4459",
            "ip_address_type": "ipv4",
            "owner_id": "633291361733",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6ba54002",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0ef7c4a9b97d670b7",
              "rtb-0f8342d97b587b6f7"
            ],
            "service_name": "com.amazonaws.us-west-1.s3",
            "service_region": "us-west-1",
            "state": "available",
            "tags": {
              "Project": "eks-ssm-prod"
            },
            "tags_all": {
              "Project": "eks-ssm-prod"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0fa40d128aa00c481"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:633291361733:security-group/sg-0857bd0a42d4362c9",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0857bd0a42d4362c9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03eff4a811f1e7602"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "eks-ssm-prod-cluster-20260211105504829300000013",
            "name_prefix": "eks-ssm-prod-cluster-",
            "owner_id": "633291361733",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-ssm-prod-cluster",
              "Project": "eks-ssm-prod"
            },
            "tags_all": {
              "Name": "eks-ssm-prod-cluster",
              "Project": "eks-ssm-prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fa40d128aa00c481"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpce_sg",
            "aws_vpc_endpoint.interface",
            "aws_vpc_endpoint.s3",
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:633291361733:security-group/sg-03eff4a811f1e7602",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03eff4a811f1e7602",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0857bd0a42d4362c9"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0857bd0a42d4362c9"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0857bd0a42d4362c9"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0857bd0a42d4362c9"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0857bd0a42d4362c9"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0857bd0a42d4362c9"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "eks-ssm-prod-node-20260211105504809200000012",
            "name_prefix": "eks-ssm-prod-node-",
            "owner_id": "633291361733",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-ssm-prod-node",
              "Project": "eks-ssm-prod",
              "kubernetes.io/cluster/eks-ssm-prod": "owned"
            },
            "tags_all": {
              "Name": "eks-ssm-prod-node",
              "Project": "eks-ssm-prod",
              "kubernetes.io/cluster/eks-ssm-prod": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fa40d128aa00c481"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpce_sg",
            "aws_vpc_endpoint.interface",
            "aws_vpc_endpoint.s3",
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "bastion_to_control_plane_https",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow bastion to access private EKS API",
            "from_port": 443,
            "id": "sgrule-3420468280",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0857bd0a42d4362c9",
            "security_group_rule_id": "sgr-0336d68a5287e6f6e",
            "self": false,
            "source_security_group_id": "sg-02ea27aa1b3463b9a",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.vpce_sg",
            "aws_vpc_endpoint.interface",
            "aws_vpc_endpoint.s3",
            "data.aws_availability_zones.available",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1976995577",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0857bd0a42d4362c9",
            "security_group_rule_id": "sgr-0ed9a72c091ee0a22",
            "self": false,
            "source_security_group_id": "sg-03eff4a811f1e7602",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.vpce_sg",
            "aws_vpc_endpoint.interface",
            "aws_vpc_endpoint.s3",
            "data.aws_availability_zones.available",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-3269359486",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-03eff4a811f1e7602",
            "security_group_rule_id": "sgr-07b32aeef2da58a1b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpce_sg",
            "aws_vpc_endpoint.interface",
            "aws_vpc_endpoint.s3",
            "data.aws_availability_zones.available",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-4138439496",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03eff4a811f1e7602",
            "security_group_rule_id": "sgr-0acd70e065abc1796",
            "self": false,
            "source_security_group_id": "sg-0857bd0a42d4362c9",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpce_sg",
            "aws_vpc_endpoint.interface",
            "aws_vpc_endpoint.s3",
            "data.aws_availability_zones.available",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-2843888096",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03eff4a811f1e7602",
            "security_group_rule_id": "sgr-01847e6b1fc34f10f",
            "self": false,
            "source_security_group_id": "sg-0857bd0a42d4362c9",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpce_sg",
            "aws_vpc_endpoint.interface",
            "aws_vpc_endpoint.s3",
            "data.aws_availability_zones.available",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-1623207542",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03eff4a811f1e7602",
            "security_group_rule_id": "sgr-0a58c700f9203a37b",
            "self": false,
            "source_security_group_id": "sg-0857bd0a42d4362c9",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpce_sg",
            "aws_vpc_endpoint.interface",
            "aws_vpc_endpoint.s3",
            "data.aws_availability_zones.available",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-1939608151",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03eff4a811f1e7602",
            "security_group_rule_id": "sgr-035a5288137ffaec8",
            "self": false,
            "source_security_group_id": "sg-0857bd0a42d4362c9",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpce_sg",
            "aws_vpc_endpoint.interface",
            "aws_vpc_endpoint.s3",
            "data.aws_availability_zones.available",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-389882268",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03eff4a811f1e7602",
            "security_group_rule_id": "sgr-012d24c22c8673491",
            "self": false,
            "source_security_group_id": "sg-0857bd0a42d4362c9",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpce_sg",
            "aws_vpc_endpoint.interface",
            "aws_vpc_endpoint.s3",
            "data.aws_availability_zones.available",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-305974380",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03eff4a811f1e7602",
            "security_group_rule_id": "sgr-0ddf7d3b9b2a56e8a",
            "self": false,
            "source_security_group_id": "sg-0857bd0a42d4362c9",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpce_sg",
            "aws_vpc_endpoint.interface",
            "aws_vpc_endpoint.s3",
            "data.aws_availability_zones.available",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-942489608",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03eff4a811f1e7602",
            "security_group_rule_id": "sgr-0dc083ac3a7568f5f",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpce_sg",
            "aws_vpc_endpoint.interface",
            "aws_vpc_endpoint.s3",
            "data.aws_availability_zones.available",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3133185630",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03eff4a811f1e7602",
            "security_group_rule_id": "sgr-0d4892d23ba4e6d81",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpce_sg",
            "aws_vpc_endpoint.interface",
            "aws_vpc_endpoint.s3",
            "data.aws_availability_zones.available",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-513752497",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-03eff4a811f1e7602",
            "security_group_rule_id": "sgr-0a03e227f4f5562ec",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpce_sg",
            "aws_vpc_endpoint.interface",
            "aws_vpc_endpoint.s3",
            "data.aws_availability_zones.available",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:633291361733:network-acl/acl-0b224e80bae2a2c35",
            "default_network_acl_id": "acl-0b224e80bae2a2c35",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0b224e80bae2a2c35",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "633291361733",
            "subnet_ids": [
              "subnet-0087f4f82a09d6c2e",
              "subnet-0158bed8779a45e2f",
              "subnet-0dd4b93ddc15b239e",
              "subnet-0f56b471510ef87ba"
            ],
            "tags": {
              "Name": "eks-ssm-prod-default",
              "Project": "eks-ssm-prod"
            },
            "tags_all": {
              "Name": "eks-ssm-prod-default",
              "Project": "eks-ssm-prod"
            },
            "vpc_id": "vpc-0fa40d128aa00c481"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:633291361733:route-table/rtb-0b88bf2bdec5019fa",
            "default_route_table_id": "rtb-0b88bf2bdec5019fa",
            "id": "rtb-0b88bf2bdec5019fa",
            "owner_id": "633291361733",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "eks-ssm-prod-default",
              "Project": "eks-ssm-prod"
            },
            "tags_all": {
              "Name": "eks-ssm-prod-default",
              "Project": "eks-ssm-prod"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0fa40d128aa00c481"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:633291361733:security-group/sg-08e975d7d1db6db51",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-08e975d7d1db6db51",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "633291361733",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-ssm-prod-default",
              "Project": "eks-ssm-prod"
            },
            "tags_all": {
              "Name": "eks-ssm-prod-default",
              "Project": "eks-ssm-prod"
            },
            "vpc_id": "vpc-0fa40d128aa00c481"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-079b9fe896dc0aaa3",
            "arn": "arn:aws:ec2:us-west-1:633291361733:elastic-ip/eipalloc-079b9fe896dc0aaa3",
            "association_id": "eipassoc-088d14c8a043a3ad5",
            "domain": "vpc",
            "id": "eipalloc-079b9fe896dc0aaa3",
            "network_border_group": "us-west-1",
            "network_interface": "eni-0f51900aadda19dcd",
            "private_dns": "ip-10-20-7-107.us-west-1.compute.internal",
            "private_ip": "10.20.7.107",
            "public_dns": "ec2-184-169-130-60.us-west-1.compute.amazonaws.com",
            "public_ip": "184.169.130.60",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eks-ssm-prod-us-west-1a",
              "Project": "eks-ssm-prod"
            },
            "tags_all": {
              "Name": "eks-ssm-prod-us-west-1a",
              "Project": "eks-ssm-prod"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c97361f248c09270",
            "arn": "arn:aws:ec2:us-west-1:633291361733:elastic-ip/eipalloc-0c97361f248c09270",
            "association_id": "eipassoc-07ead87df274f791d",
            "domain": "vpc",
            "id": "eipalloc-0c97361f248c09270",
            "network_border_group": "us-west-1",
            "network_interface": "eni-00d965e3b0ddf16ab",
            "private_dns": "ip-10-20-16-216.us-west-1.compute.internal",
            "private_ip": "10.20.16.216",
            "public_dns": "ec2-54-151-40-68.us-west-1.compute.amazonaws.com",
            "public_ip": "54.151.40.68",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eks-ssm-prod-us-west-1b",
              "Project": "eks-ssm-prod"
            },
            "tags_all": {
              "Name": "eks-ssm-prod-us-west-1b",
              "Project": "eks-ssm-prod"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:633291361733:internet-gateway/igw-0b83fe7b5a7738224",
            "id": "igw-0b83fe7b5a7738224",
            "owner_id": "633291361733",
            "tags": {
              "Name": "eks-ssm-prod",
              "Project": "eks-ssm-prod"
            },
            "tags_all": {
              "Name": "eks-ssm-prod",
              "Project": "eks-ssm-prod"
            },
            "vpc_id": "vpc-0fa40d128aa00c481"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-079b9fe896dc0aaa3",
            "association_id": "eipassoc-088d14c8a043a3ad5",
            "connectivity_type": "public",
            "id": "nat-087504ec5e2d28823",
            "network_interface_id": "eni-0f51900aadda19dcd",
            "private_ip": "10.20.7.107",
            "public_ip": "184.169.130.60",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0dd4b93ddc15b239e",
            "tags": {
              "Name": "eks-ssm-prod-us-west-1a",
              "Project": "eks-ssm-prod"
            },
            "tags_all": {
              "Name": "eks-ssm-prod-us-west-1a",
              "Project": "eks-ssm-prod"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c97361f248c09270",
            "association_id": "eipassoc-07ead87df274f791d",
            "connectivity_type": "public",
            "id": "nat-0515eaba784d0a4c8",
            "network_interface_id": "eni-00d965e3b0ddf16ab",
            "private_ip": "10.20.16.216",
            "public_ip": "54.151.40.68",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0087f4f82a09d6c2e",
            "tags": {
              "Name": "eks-ssm-prod-us-west-1b",
              "Project": "eks-ssm-prod"
            },
            "tags_all": {
              "Name": "eks-ssm-prod-us-west-1b",
              "Project": "eks-ssm-prod"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f8342d97b587b6f71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-087504ec5e2d28823",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f8342d97b587b6f7",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ef7c4a9b97d670b71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0515eaba784d0a4c8",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ef7c4a9b97d670b7",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b83fe7b5a7738224",
            "id": "r-rtb-06f6e02dc300f173e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06f6e02dc300f173e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:633291361733:route-table/rtb-0f8342d97b587b6f7",
            "id": "rtb-0f8342d97b587b6f7",
            "owner_id": "633291361733",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-087504ec5e2d28823",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-ssm-prod-private-us-west-1a",
              "Project": "eks-ssm-prod"
            },
            "tags_all": {
              "Name": "eks-ssm-prod-private-us-west-1a",
              "Project": "eks-ssm-prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fa40d128aa00c481"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:633291361733:route-table/rtb-0ef7c4a9b97d670b7",
            "id": "rtb-0ef7c4a9b97d670b7",
            "owner_id": "633291361733",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0515eaba784d0a4c8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-ssm-prod-private-us-west-1b",
              "Project": "eks-ssm-prod"
            },
            "tags_all": {
              "Name": "eks-ssm-prod-private-us-west-1b",
              "Project": "eks-ssm-prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fa40d128aa00c481"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:633291361733:route-table/rtb-06f6e02dc300f173e",
            "id": "rtb-06f6e02dc300f173e",
            "owner_id": "633291361733",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b83fe7b5a7738224",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-ssm-prod-public",
              "Project": "eks-ssm-prod"
            },
            "tags_all": {
              "Name": "eks-ssm-prod-public",
              "Project": "eks-ssm-prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fa40d128aa00c481"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0582c18fe195e93fb",
            "route_table_id": "rtb-0f8342d97b587b6f7",
            "subnet_id": "subnet-0158bed8779a45e2f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014d660674e9176b0",
            "route_table_id": "rtb-0ef7c4a9b97d670b7",
            "subnet_id": "subnet-0f56b471510ef87ba"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d06d01cc891b650e",
            "route_table_id": "rtb-06f6e02dc300f173e",
            "subnet_id": "subnet-0dd4b93ddc15b239e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069f9c0cf1ffc5f1c",
            "route_table_id": "rtb-06f6e02dc300f173e",
            "subnet_id": "subnet-0087f4f82a09d6c2e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:633291361733:subnet/subnet-0158bed8779a45e2f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.20.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0158bed8779a45e2f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "633291361733",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-ssm-prod-private-us-west-1a",
              "Project": "eks-ssm-prod"
            },
            "tags_all": {
              "Name": "eks-ssm-prod-private-us-west-1a",
              "Project": "eks-ssm-prod"
            },
            "vpc_id": "vpc-0fa40d128aa00c481"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:633291361733:subnet/subnet-0f56b471510ef87ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.20.144.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f56b471510ef87ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "633291361733",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-ssm-prod-private-us-west-1b",
              "Project": "eks-ssm-prod"
            },
            "tags_all": {
              "Name": "eks-ssm-prod-private-us-west-1b",
              "Project": "eks-ssm-prod"
            },
            "vpc_id": "vpc-0fa40d128aa00c481"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:633291361733:subnet/subnet-0dd4b93ddc15b239e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.20.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd4b93ddc15b239e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "633291361733",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-ssm-prod-public-us-west-1a",
              "Project": "eks-ssm-prod"
            },
            "tags_all": {
              "Name": "eks-ssm-prod-public-us-west-1a",
              "Project": "eks-ssm-prod"
            },
            "vpc_id": "vpc-0fa40d128aa00c481"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:633291361733:subnet/subnet-0087f4f82a09d6c2e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.20.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0087f4f82a09d6c2e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "633291361733",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-ssm-prod-public-us-west-1b",
              "Project": "eks-ssm-prod"
            },
            "tags_all": {
              "Name": "eks-ssm-prod-public-us-west-1b",
              "Project": "eks-ssm-prod"
            },
            "vpc_id": "vpc-0fa40d128aa00c481"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:633291361733:vpc/vpc-0fa40d128aa00c481",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0b224e80bae2a2c35",
            "default_route_table_id": "rtb-0b88bf2bdec5019fa",
            "default_security_group_id": "sg-08e975d7d1db6db51",
            "dhcp_options_id": "dopt-0c675903102feb2cb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fa40d128aa00c481",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b88bf2bdec5019fa",
            "owner_id": "633291361733",
            "tags": {
              "Name": "eks-ssm-prod",
              "Project": "eks-ssm-prod"
            },
            "tags_all": {
              "Name": "eks-ssm-prod",
              "Project": "eks-ssm-prod"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}